menu dropdown alignment fix

--- a/client/public/assets/scss/header/_mainmenu.scss
+++ b/client/public/assets/scss/header/_mainmenu.scss
@@ -23,7 +23,7 @@ Mainmenu Area
                 > ul {
                     &.submenu {
                         @extend %liststyle;
-                        min-width: 50px;
+                        min-width: 90px;
                         height: auto;
                         position: absolute;
                         top: 100%;
@@ -44,6 +44,7 @@ Mainmenu Area
                                 font-weight: 500;
                                 padding: 5px 20px;
                                 font-size: 14px;
+                                min-width: 90px;
                                 display: block;
                                 color: #1f1f25;
                                 margin: 0 10px;
@@ -52,7 +53,7 @@ Mainmenu Area
                             }
                             &:hover {
                                 > a {
-                                min-width: 50px;
+                                min-width: 90px;
 
                                     color: $theme-color;
                                     background: rgba(249, 0, 77, 0.07);
